Ajustando Exception Handler para adicionar mensagens de validação em nível de classe.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,10 +4,12 @@
 #NotBlank.cozinha.nome=Nome da cozinha é obrigatório.
 #NotBlank.nome=Informe um nome, porque é obrigatório.
 #Multiplo={0} deve ser um valor múltiplo {1} aula 9.16 ESR
+ValorZeroIncluiDescricao={1} deve conter {2} 
 
 NotBlank={0} é obrigatório
 NotNull={0} é obrigatório
 #PositiveOrZero={0} deve ser um valor maior ou igual a zero
+
 
 TaxaFrete.invalida={0} está inválido
 
