--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,28 +6,28 @@
 #Multiplo={0} deve ser um valor m√∫ltiplo {1} aula 9.16 ESR
 ValorZeroIncluiDescricao={1} deve conter {2} 
 
-NotBlank={0} √© obrigat√≥rio
-NotNull={0} √© obrigat√≥rio
+NotBlank={0} … obrigatÛrio
+NotNull={0} … obrigatÛrio
 #PositiveOrZero={0} deve ser um valor maior ou igual a zero
 
 
-TaxaFrete.invalida={0} est√° inv√°lido
+TaxaFrete.invalida={0} est· inv·lido
 
 #Cozinha
 cozinha.nome=Nome da cozinha
-cozinha.id=C√≥digo da cozinha
+cozinha.id=CÛdigo da cozinha
 
 # Restaurante
-NotNull.restaurante.taxaFrete={0} √© obrigat√≥ria
-NotNull.restaurante.cozinha={0} √© obrigat√≥ria
+NotNull.restauranteInput.taxaFrete={0} È obrigatÛria
+NotNull.restauranteInput.cozinha={0} È obrigatÛria
 
-restaurante.nome=Nome do restaurante
-restaurante.cozinha=Cozinha do restaurante
-restaurante.taxaFrete=Taxa de frete do restaurante
+restauranteInput.nome=Nome do restaurante
+restauranteInput.cozinha=Cozinha do restaurante
+restauranteInput.taxaFrete=Taxa de frete do restaurante
 
 # Estado
 estado.nome=Nome do estado
-estado.id=C√≥digo do estado
+estado.id=CÛdigo do estado
 
 # Cidade
 cidade.nome=Nome da cidade
