Associação e desassociação de formas de pagamentos

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,20 +6,20 @@
 #Multiplo={0} deve ser um valor mÃºltiplo {1} aula 9.16 ESR
 ValorZeroIncluiDescricao={1} deve conter {2} 
 
-NotBlank={0} É obrigatório
-NotNull={0} É obrigatório
+NotBlank={0} Ã© obrigatÃ³rio
+NotNull={0} Ã© obrigatÃ³rio
 #PositiveOrZero={0} deve ser um valor maior ou igual a zero
 
 
-TaxaFrete.invalida={0} está inválido
+TaxaFrete.invalida={0} estï¿½ invï¿½lido
 
 #Cozinha
 cozinhaInput.nome=Nome da cozinha
-cozinhaInput.id=Código da cozinha
+cozinhaInput.id=CÃ³digo da cozinha
 
 # Restaurante
-NotNull.restauranteInput.taxaFrete={0} é obrigatória
-NotNull.restauranteInput.cozinha={0} é obrigatória
+NotNull.restauranteInput.taxaFrete={0} Ã© obrigatï¿½ria
+NotNull.restauranteInput.cozinha={0} Ã© obrigatï¿½ria
 
 restauranteInput.nome=Nome do restaurante
 restauranteInput.cozinha=Cozinha do restaurante
@@ -27,22 +27,36 @@ restauranteInput.taxaFrete=Taxa de frete do restaurante
 
 # Estado
 estadoInput.nome=Nome do estado
-estadoInput.id=Código do estado
+estadoInput.id=CÃ³digo do estado
 
 # Cidade
 cidadeInput.nome=Nome da cidade
 cidadeInput.estado=Estado da cidade
 
 #Forma Pagamento
-NotBlank.formaPagamentoInput.descricao={0} é obrigatória
-formaPagamentoInput.id=Código da forma de pagamento
-formaPagamentoInput.descricao=Descrição da forma de pagamento
+NotBlank.formaPagamentoInput.descricao={0} Ã© obrigatÃ³ria
+formaPagamentoInput.id=CÃ³digo da forma de pagamento
+formaPagamentoInput.descricao=DescriÃ§Ã£o da forma de pagamento
 
 #Endereco
 endereco=Endereco
 endereco.logradouro=Logradouro
-endereco.numero=Número do logradouro
+endereco.numero=Nï¿½mero do logradouro
 endereco.cidade=Cidade
-endereco.cidade.id=Código da cidade
+endereco.cidade.id=CÃ³digo da cidade
 endereco.cep=CEP
 endereco.bairro=Bairro
+
+NotBlank.usuarioComSenhaInput.senha={0} Ã© obrigatÃ³ria
+usuarioComSenhaInput.nome=Nome do usuÃ¡rio
+usuarioComSenhaInput.email=E-mail do usuÃ¡rio
+usuarioComSenhaInput.senha=Senha do usuÃ¡rio
+
+NotBlank.usuarioInput.senha={0} Ã© obrigatÃ³ria
+usuarioInput.nome=Nome do usuÃ¡rio
+usuarioInput.email=E-mail do usuÃ¡rio
+
+NotBlank.senhaInput.senhaAtual={0} Ã© obrigatÃ³ria
+NotBlank.senhaInput.novaSenha={0} Ã© obrigatÃ³ria
+senhaInput.senhaAtual=Senha atual
+senhaInput.novaSenha=Nova senha
