--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -33,6 +33,9 @@ estadoInput.id=Código do estado
 cidadeInput.nome=Nome da cidade
 cidadeInput.estado=Estado da cidade
 
+permissaoInput.nome=Nome da permissão
+permissaoInput.descricao=Descrição da permissão
+
 #Forma Pagamento
 NotBlank.formaPagamentoInput.descricao={0} é obrigatória
 formaPagamentoInput.id=Código da forma de pagamento
