Criando upload de fotos dos produtos e validação do tamanho com anotação.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -91,3 +91,8 @@ pedidoFilter.dataCriacaoFim=Data final de criação do pedido
 vendaDiariaFilter.restauranteId=Código do restaurante
 vendaDiariaFilter.dataCriacaoInicio=Data inicial de criação do pedido
 vendaDiariaFilter.dataCriacaoFim=Data final de criação do pedido
+
+#Foto Produto
+fotoProdutoInput.arquivo=Arquivo da foto
+fotoProdutoInput.arquivo=Descrição da foto
+FileSize.fotoProdutoInput.arquivo=A foto deve ter um tamanho no máximo de {1}
