Criando o validador FileContentTypeValidator

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -96,3 +96,5 @@ vendaDiariaFilter.dataCriacaoFim=Data final de criação do pedido
 fotoProdutoInput.arquivo=Arquivo da foto
 fotoProdutoInput.arquivo=Descrição da foto
 FileSize.fotoProdutoInput.arquivo=A foto deve ter um tamanho no máximo de {1}
+
+FileContentType.fotoProdutoInput.arquivo= A foto deve ser do tipo JPG OU PNG
