--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -98,3 +98,6 @@ fotoProdutoInput.arquivo=Descrição da foto
 FileSize.fotoProdutoInput.arquivo=A foto deve ter um tamanho no máximo de {1}
 
 FileContentType.fotoProdutoInput.arquivo= A foto deve ser do tipo JPG OU PNG
+
+scope.READ=Acesso de leitura
+scope.WRITEAcesso de escrita
